deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-deploy
  template:
    metadata:
      labels:
        app: flask-deploy
    spec:
      containers:
      - name: flask-container
        image: shvmrathod/flask-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
